# Agent_IA_Doctor_Banach

./: .gitignore  Etica y Compromiso.md  README.md  app.py  codigo.ipynb  codigo.py  image3.py  my_functions.py  requirements.txt  setup.bat  setup.py  setup.sh
ArchivosPrueba/dataset_2_sub-01_run-01_T1w/: slice_0000.dcm  slice_0001.dcm  slice_0002.dcm  slice_0003.dcm  slice_0004.dcm  slice_0005.dcm  slice_0006.dcm  slice_0007.dcm  slice_0008.dcm  slice_0009.dcm  slice_0010.dcm  slice_0011.dcm  slice_0012.dcm  slice_0013.dcm  slice_0014.dcm  slice_0015.dcm  slice_0016.dcm  slice_0017.dcm  slice_0018.dcm  slice_0019.dcm  slice_0020.dcm  slice_0021.dcm  slice_0022.dcm  slice_0023.dcm  slice_0024.dcm  slice_0025.dcm  slice_0026.dcm  slice_0027.dcm  slice_0028.dcm  slice_0029.dcm  slice_0030.dcm  slice_0031.dcm  slice_0032.dcm  slice_0033.dcm  slice_0034.dcm  slice_0035.dcm  slice_0036.dcm  slice_0037.dcm  slice_0038.dcm  slice_0039.dcm  (+280 more)
desarrollo/: app.py  requirements.txt
doctor/: README.md  pyproject.toml
doctor/src/doctor/: crew.py  main.py
homework/: functions.ipynb  notebook_1.ipynb
homework.egg-info/: PKG-INFO  SOURCES.txt
