[project]
name = "doctor"
version = "0.1.0"
description = "doctor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
doctor = "doctor.main:run"
run_crew = "doctor.main:run"
train = "doctor.main:train"
replay = "doctor.main:replay"
test = "doctor.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
